--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
-    "element-ui": "^1.4.6",
+    "element-ui": "^1.4.7",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -81,6 +81,7 @@
     "style-loader": "^0.19.0",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.0.4",
+    "vue-resource": "^1.3.4",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
     "webpack": "^2.6.1",
